examples/datalog/15_arithmetic/38_compound_expr.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_compound
Knowledge graph 'test_compound' created.
Switched to knowledge graph: test_compound
> .kg use test_compound
Switched to knowledge graph: test_compound
> +vals[(10, 5, 2)].
Inserted 1 fact(s) into 'vals'.
> result(A, B, C, R) :- vals(A, B, C), R = (A - B) * C + A.
Script error: Parse error: Invalid arithmetic expression: 'A - B'
